Feature/sgp migrate